2003-11-16  Bruno Haible  <bruno@clisp.org>

	* xsize.h (xmax): New function.
	(xsum, xsum3, xsum4): Declare as "pure" functions.

2003-11-15  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (AM_CPPFLAGS): Renamed from INCLUDES.

2003-11-15  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (docdir, examplesconfigdir, examplesconfig_DATA): New
	variables.

2003-11-11  Bruno Haible  <bruno@clisp.org>

	* xsize.h (SIZE_MAX): Remove fallback definition.

2003-11-05  Bruno Haible  <bruno@clisp.org>

	* xsize.h: Include limits.h, to avoid a possible collision with
	SIZE_MAX defined in <limits.h> on Solaris.

2003-11-04  Bruno Haible  <bruno@clisp.org>

	* xsize.h: New file.
	* linebreak.c: Include xsize.h.
	(mbs_possible_linebreaks, mbs_width_linebreaks): Check malloc()
	argument for overflow.
	* Makefile.am (libgettextlib_la_SOURCES): Add xsize.h.

2003-10-31  Bruno Haible  <bruno@clisp.org>

	* wait-process.c (wait_process): Use waitid with WNOWAIT if available,
	to avoid (extremely rare) race condition.

2003-10-27  Bruno Haible  <bruno@clisp.org>

	* stdbool_.h: Better support for BeOS.

2003-10-14  Bruno Haible  <bruno@clisp.org>

	* hash.h: Make it includable in C++ mode.

2003-10-21  Bruno Haible  <bruno@clisp.org>

	* canonicalize.c (lstat): Define as an alias to 'stat' on systems
	without symbolic links.

2003-10-21  Bruno Haible  <bruno@clisp.org>

	* wait-process.c (kill): Define appropriately for native Woe32 API.

2003-10-21  Bruno Haible  <bruno@clisp.org>

	* mkdtemp.c (mkdir): Redefine on mingw.

2003-10-17  Bruno Haible  <bruno@clisp.org>

	* binary-io.h: Avoid warnings on Cygwin.

2003-10-09  Bruno Haible  <bruno@clisp.org>

	* xalloc.h: Renamed from xmalloc.h.
	* classpath.c: Include xalloc.h instead of xmalloc.h.
	* concatpath.c: Likewise.
	* fatal-signal.c: Likewise.
	* findprog.c: Likewise.
	* fstrcmp.c: Likewise.
	* hash.c: Likewise.
	* javacomp.c: Likewise.
	* javaexec.c: Likewise.
	* progreloc.c: Likewise.
	* relocatable.c: Likewise.